delete configs, add into gitignore

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: true
-      #EMAIL: ${{ secrets.SD_EMAIL }}
-      #PASSWORD: ${{ secrets.SD_PASSWORD }}
+      EMAIL: ${{ secrets.SD_EMAIL }}
+      PASSWORD: ${{ secrets.SD_PASSWORD }}
 
     permissions:
       contents: read
@@ -35,26 +35,3 @@ jobs:
 
       - name: Run tests
         run: mvn clean test
-
-      - name: Get Allure history
-        uses: actions/checkout@v2
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        with:
-          allure_results: target/allure-results
-          allure_history: allure-history
-
-      - name: Deploy report to Github Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
